Fixed current functionality for whenever the page has the normal logo. Gotta see if it generalizes for special doodle dates.

--- a/page_eater.css
+++ b/page_eater.css
@@ -31,4 +31,29 @@ body {
 }
 
 
+/*
+	This removes the doodle whenever Google uses its normal logo.
+*/
+#hplogo {
+	background: none;
+	height: auto;
+	width: auto;
+}
+
+#_eEe {
+	display: none;
+}
+
+#xkcd_img {
+
+}
+
+/*
+	This hopefully removes everything inside the doodle for special dates
+*/
+#hplogo > a {
+	display: none;
+}
+
+
 /* FIXME BACKGROUND COLOR XKCDDDDDDDDD */
