Added padding to logo.

--- a/page_eater.css
+++ b/page_eater.css
@@ -1,7 +1,7 @@
 /* CSS BITCHES */
 /* SHIT DOG */
 
-body { 
+body {
 	/*border: 20px dotted pink; */
 }
 
@@ -38,6 +38,7 @@ body {
 	background: none;
 	height: auto;
 	width: auto;
+	padding-top: 60px;
 }
 
 #_eEe {
